--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <div class="field">
+
     <%= f.label :name %><br>
     <%= f.text_field :name %><br>
     <%= f.label :content %><br>
@@ -21,6 +22,16 @@
 
   <div class="field">
     <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %><br>
+  </div>
+
+  <div class="field">
+    New tags:
+    <%= f.fields_for :tags do |t| %>
+      <li>
+        <%= t.label :name %>
+        <%= t.text_field :name %>
+      </li>
+      <%end %>
   </div>
 
   <div class="actions">
